<resources>
    <string name="app_name">WeatherApp-JuanArizaOnecha</string>
    <string name="loading">Loading...</string>
    <string name="charginglogoimage">chargingLogoImage</string>
    <string name="loadingimage">loadingImage</string>
    <string name="imagegearlu">imageGearLU</string>
    <string name="iamgegearru">iamgegearru</string>
    <string name="imagegearld">imagegearld</string>
    <string name="imagegearrd">imagegearrd</string>
    <string name="clouds">clouds</string>
    <string name="gps_location">GPS LOCATION</string>
    <string name="now_in">Now In</string>
    <string name="moon">moon</string>
    <string name="day">DAY</string>
    <string name="temp">TEMP</string>
    <string name="max">MAX</string>
    <string name="min">MIN</string>
    <string name="favourite_cities">Favourite Cities</string>
    <string name="list_of_cities">List of Cities</string>
    <string name="temperature" />
    <string name="coordinates_cl">Coordinates</string>
    <string name="wind_speed_cl">Wind Speed</string>
    <string name="temperature_cl">Temperature</string>
    <string name="add_city">Add City</string>
    <string name="remove_city">Remove City</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="precip">PRECIP</string>
    <string name="wind">WIND</string>
    <string name="favourite">Favourite</string>
    <string name="save">Save</string>
    <string name="historical_data">Historical Data</string>
    <string name="city_name">City Name</string>
    <string name="rainy_state_history">Rainy State History</string>
    <string name="sunny_state_history">Sunny State History</string>
    <string name="windy_state_history">Windy State History</string>
    <string name="db_image">Db image</string>
    <string name="no_report">No Report</string>
    <string name="cloud_no_connection">Cloud no connection</string>
    <string name="mobile_no_connection">Mobile no connection</string>
</resources>