<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".SplashScreenActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/loading_image"
                android:contentDescription="@string/loadingimage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/twLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_weight="1"
                    android:text="@string/loading"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/twPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="This will take few seconds"
                    android:textColor="#FFFFFF"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imGearLU"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/gear"
                    android:contentDescription="@string/imagegearlu" />

                <ImageView
                    android:id="@+id/imGearRU"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/gear"
                    android:contentDescription="@string/iamgegearru" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imGearLD"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/gear"
                    android:contentDescription="@string/imagegearld" />

                <ImageView
                    android:id="@+id/imGearRD"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/gear"
                    android:contentDescription="@string/imagegearrd" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>