<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F78B5"
    tools:context=".MainScreenActivity">

    <TextView
        android:id="@+id/twLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/now_in"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twGpsLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twLocation"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:id="@+id/imMoon"
        android:layout_width="64dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twLocation"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/moon"
        android:contentDescription="@string/moon" />

    <TextView
        android:id="@+id/twDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imMoon"
        app:layout_constraintVertical_bias="0.038" />

    <TableLayout
        android:id="@+id/tableWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@id/twDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tw00"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tw10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tw20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw23"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tw30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tw33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tw40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/tw41"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/tw42"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/tw43"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnFavouriteCities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favourite_cities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableWeather"
        app:layout_constraintVertical_bias="0.385" />

    <Button
        android:id="@+id/btnCitiesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_cities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toEndOf="@+id/btnFavouriteCities"
        app:layout_constraintTop_toBottomOf="@+id/tableWeather"
        app:layout_constraintVertical_bias="0.385" />


</androidx.constraintlayout.widget.ConstraintLayout>