<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F78B5"
    tools:context=".HistoricalDataActivity">

    <TextView
        android:id="@+id/twInitHistoric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:textColor="#78288C"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/twInitHistoric"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:id="@+id/imRainHist"
            android:layout_width="wrap_content"
            android:layout_height="116dp"
            android:visibility="gone"
            app:srcCompat="@mipmap/raining_state"
            android:contentDescription="@string/rainy_state_history" />

        <ImageView
            android:id="@+id/imWindHist"
            android:layout_width="wrap_content"
            android:layout_height="116dp"
            android:visibility="gone"
            app:srcCompat="@mipmap/wind_state"
            android:contentDescription="@string/windy_state_history" />

        <ImageView
            android:id="@+id/imSunHist"
            android:layout_width="wrap_content"
            android:layout_height="116dp"
            android:visibility="gone"
            app:srcCompat="@mipmap/sunny_state"
            android:contentDescription="@string/sunny_state_history" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="33dp"
        android:orientation="vertical"
        android:background="@drawable/linear_border"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/twHistDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/twHistTempMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/twHistTempMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/twHistWind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/twHistPrecip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
